# vllm-serving-ops-studio

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: manifest.json
configs/: project.json
data/: README.md
demo/: app.js  index.html  styles.css
docs/: architecture.md  deployment.md  evaluation.md  index.html  landing.css  landing.js  runbook.md
outreach/: contact_targets.json  email_to_authors.md
research/: improvement_plan.md  innovation_memo.md  sources.md  upstream_audit.md  upstream_snapshot.json
scripts/: bootstrap_data.py
social/: linkedin_post.md  publish_checklist.md
src/app/: config.py  engine.py  main.py
src/app/web/: app.js  index.html  styles.css
tests/: test_app.py  test_smoke.py
