
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-serving-ops-studio"
version = "0.1.0"
description = "Create a serving operations console for LLM inference, throughput, queueing, and latency-aware deployment decisions."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
